--- a/style.css
+++ b/style.css
@@ -1,10 +1,16 @@
 body{
     color:white;  
 background-color: brown;
+font-family: Arial, Helvetica, sans-serif;
 }
     
 ul{
     display: flex;
 justify-content: space-between;
+list-style-type: none;
+align-items: center;
+padding: 16px;
+
+
 
 }
