--- a/style.css
+++ b/style.css
@@ -10,7 +10,15 @@ justify-content: space-between;
 list-style-type: none;
 align-items: center;
 padding: 16px;
+}
+
+a {
+color:white
+  text-decotion:none.
 
 
 
 }
+
+
+
