--- a/style.css
+++ b/style.css
@@ -14,11 +14,14 @@ padding: 16px;
 
 a {
 color:white
-  text-decotion:none.
-
-
-
+  text-decoration:none.
 }
 
+img {
+  width: 150px;
+  height: 150px;
+  border-radius: 50%;
+  border: 5px solid white;
+}
 
 
